# lear

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  lear.1  pyproject.toml
Formula/: lear.rb
lear/: __init__.py  __main__.py  cli.py  king_lear.txt
scripts/: setup.sh
