[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lear"
version = "1.0.0"
description = "Mistyped 'clear'? Enjoy King Lear instead."
readme = "README.md"
license = "MIT"
requires-python = ">= 3.9"
authors = [{ name = "Radu" }]
keywords = ["cli", "clear", "lear", "king-lear", "terminal", "fun"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/vasilescur/lear"
Issues = "https://github.com/vasilescur/lear/issues"

[project.scripts]
lear = "lear.cli:main"

[tool.setuptools.package-data]
lear = ["king_lear.txt"]
